# thermocycleproject

./: .gitignore  CYCLE_CONTROL_INSTRUCTIONS.md  FLOWCHART_FIX_INSTRUCTIONS.md  README.md  WEBSITE_DESIGN_GUIDE.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
EES Calculator/: EEScodegenV2.py
analysis/: __init__.py  economics.py  exergy.py  optimization.py
config/: cycles.yaml  fluids.yaml  heat_sources.yaml
core/: __init__.py  base_cycle.py  brayton_cycle.py  combined_cycle.py  components.py  cycle_control.py  diesel_cycle.py  dual_cycle.py  ericsson_cycle.py  otto_cycle.py  rankine_cycle.py  refrigeration_cycle.py  sco2_cycle.py  solver.py  state.py  stirling_cycle.py  water_additives.py
gui/: app.py
tests/: __init__.py  test_property_wrapper.py  test_rankine_cycle.py
utils/: __init__.py  helpers.py  property_wrapper.py
validation/: __init__.py  benchmark_data.py
visualization/: __init__.py  flow_charts.py  ph_diagram.py  pv_diagram.py  ts_diagram.py
website/: PROJECT_VISION_BOARD.md  steam_cycle_content.html  steam_cycle_styles.css
